modificacion del header

--- a/src/app/shared/header/header.page.html
+++ b/src/app/shared/header/header.page.html
@@ -10,8 +10,8 @@
           </ion-buttons>
         </div>
       </ion-col>
-      <ion-col>
-        <div id="logo">
+      <ion-col size="8">
+        <div id="logo" *ngIf="showLogo">
           <ion-img src="assets/img/shared/logo_purple.png"></ion-img>
         </div>
       </ion-col>
