--- a/src/app/config-support/config-support.page.html
+++ b/src/app/config-support/config-support.page.html
@@ -1,4 +1,4 @@
-<app-header [showBack]="true" [showConfig]="true" urlBack="principal"></app-header>
+<app-header [showBack]="true" [showConfig]="true" urlBack="principal" [showLogo]="true"></app-header>
 <ion-content>
   <div id="title">
     <h6><b>Contactar con soporte</b></h6>
