--- a/src/app/procedures/procedures.page.html
+++ b/src/app/procedures/procedures.page.html
@@ -1,4 +1,4 @@
-<app-header [showBack]="true" [showConfig]="true" urlBack="principal/type-service"></app-header>
+<app-header [showBack]="true" [showConfig]="true" urlBack="principal/type-service" [showLogo]="true"></app-header>
 
 <ion-content>
   <div class="title-white">
