--- a/src/app/rhinoceros/rhinoceros.page.html
+++ b/src/app/rhinoceros/rhinoceros.page.html
@@ -1,4 +1,4 @@
-<app-header [showBack]="true" [showConfig]="true" urlBack="principal"></app-header>
+<app-header [showBack]="true" [showConfig]="true" urlBack="principal" [showLogo]="true"></app-header>
 
 <ion-content>
   <div class="title-white">
