--- a/src/app/tracking-courier-messaging/tracking-courier-messaging.page.html
+++ b/src/app/tracking-courier-messaging/tracking-courier-messaging.page.html
@@ -1,4 +1,4 @@
-<app-header [showBack]="true" [showConfig]="false" urlBack="principal"></app-header>
+<app-header [showBack]="true" [showConfig]="false" urlBack="principal" [showLogo]="false"></app-header>
 
 <ion-content [fullscreen]="true">
   <div id="map">
