modificacion de estilos y html en welcome

--- a/src/app/courier-messaging/courier-messaging.page.html
+++ b/src/app/courier-messaging/courier-messaging.page.html
@@ -94,6 +94,6 @@
       </div>
     </div>
     <br>
-    <ion-button shape="round" type="submit" expand="block"  type="submit">Solicitar Servicio</ion-button>
+    <ion-button shape="round" type="submit" expand="block" >Solicitar Servicio</ion-button>
   </form>
 </ion-content>
