--- a/src/app/shared/header/header.page.html
+++ b/src/app/shared/header/header.page.html
@@ -12,7 +12,7 @@
       </ion-col>
       <ion-col size="8">
         <div id="logo" *ngIf="showLogo">
-          <ion-img src="assets/img/shared/logo_purple.png"></ion-img>
+          <ion-img src="assets/img/shared/logo.png"></ion-img>
         </div>
       </ion-col>
       <ion-col size="2">
