modificacion de modificacion de html y css en registro de usuario

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,6 +1,7 @@
 ion-content{
   --padding-start: 20px;
   --padding-end: 20px;
+  --background: var(--ion-color-gray-3);
 }
 
 #logo{
@@ -14,20 +15,20 @@ ion-content{
 
 ion-item{
   --border-width: 0.55px 0.55px 0.55px 0.55px;
-  --border-color: var(--ion-color-gray-1);
+  --border-color: #ffffff;
   --border-radius: 20px;
-  --color: var(--ion-color-gray-1);
+  --color: #ffffff;;
   --background: transparent;
-  --highlight-color-focused: var(--ion-color-gray-1);
-  --highlight-color-valid: var(--ion-color-gray-1);
-  --highlight-color-invalid: var(--ion-color-gray-1);
+  --highlight-color-focused: #ffffff;;
+  --highlight-color-valid: #ffffff;;
+  --highlight-color-invalid: #ffffff;;
   --padding-start: 8px;
   font-size: 13px;
 }
 
 ion-item img{
-  width: 23px;
-  height: 23px;
+  width: 20px;
+  height: 20px;
 }
 
 #restorePassword{
@@ -35,5 +36,14 @@ ion-item img{
   text-align: center;
   font-size: 13px;
   margin-top: 8px;
-  color: var(--ion-color-gray-1);
+  color: #ffffff;
+}
+
+.errors{
+  margin-top: 5px;
+}
+
+.errors ion-note{
+  --color: var(--ion-color-danger);
+  font-size: 13px;
 }
