creacion de html para reestablecer la contraseña

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -27,7 +27,7 @@
           <ion-note>La constraseña debe tener al menos 6 caracteres</ion-note>
         </div>
       </div>
-      <a id="restorePassword">Recuperar contraseña?</a>
+      <a id="restorePassword" (click)="openRestorePassword()">Recuperar contraseña?</a>
       <ion-button type="submit" shape="round" expand="block" style="margin-top:45px">Iniciar sesión</ion-button>
     </form>
 </ion-content>
