--- a/src/app/reset-password/reset-password.page.html
+++ b/src/app/reset-password/reset-password.page.html
@@ -1,9 +1,20 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>reset-password</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content [fullscreen]="true">
+    <div id="logo">
+      <img src="assets/img/shared/logo.png" alt="">
+    </div>
+    <form [formGroup]="resetPasswordForm" (ngSubmit)="resetPassword()">
+      <ion-item lines="none" style="margin-top: 40px">
+        <ion-input formControlName="email" placeholder="Usuario"></ion-input>
+        <img src="assets/img/shared/usuario.png" alt="">
+      </ion-item>
+      <div *ngIf="email.invalid && (email.dirty || email.touched)">
+        <div *ngIf="email.errors?.['required']" class="errors">
+          <ion-note>Correo requerido</ion-note>
+        </div>
+        <div *ngIf="email.errors?.['email']" class="errors">
+          <ion-note>Email errado</ion-note>
+        </div>
+      </div>
+      <ion-button type="submit" shape="round" expand="block" style="margin-top:45px">Iniciar sesión</ion-button>
+    </form>
 </ion-content>
