creacion de componente y conexion con el servicio para obtener las solicitudes

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true">
+<ion-content>
     <div id="logo">
       <img src="assets/img/shared/logo.png" alt="">
     </div>
