--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -1,22 +1,20 @@
 <ion-content>
-
-  <div id="title">
-    <p>Yarumal</p>
-  </div>
-
-  <div id="logo">
-    <img src="assets/img/shared/logo.png">
-  </div>
-
-  <div id="actions">
-    <ion-button shape="round" expand="block" color="secondary" (click)="openLogin()" style="margin-bottom: 12px;">Iniciar Sesion</ion-button>
-    <ion-button shape="round" expand="block" color="secondary" (click)="openRegister()">Registrarse</ion-button>
-    <p style="text-align: center;font-size: 12px;">¿Nesecitas ayuda?</p>
-    <div id="network">
-      <img src="assets/img/welcome/fb.png" alt="">
-      <img src="assets/img/welcome/instg.png" alt="">
-      <img src="assets/img/welcome/wpp.png" alt="">
-    </div>
-  </div>
-
+ <div style="padding-left:20px;padding-right:20px">
+   <div id="title">
+     <p>Yarumal</p>
+   </div>
+   <div id="logo">
+     <img src="assets/img/shared/logo.png">
+   </div>
+   <div id="actions">
+     <ion-button shape="round" expand="block" color="secondary" (click)="openLogin()" style="margin-bottom: 12px;">Iniciar Sesion</ion-button>
+     <ion-button shape="round" expand="block" color="secondary" (click)="openRegister()">Registrarse</ion-button>
+     <p id="help">¿Nesecitas ayuda?</p>
+     <div id="network">
+       <img src="assets/img/welcome/fb.png" alt="">
+       <img src="assets/img/welcome/instg.png" alt="">
+       <img src="assets/img/welcome/wpp.png" alt="">
+     </div>
+   </div>
+ </div>
 </ion-content>
