--- a/src/app/register-user/register-user.page.html
+++ b/src/app/register-user/register-user.page.html
@@ -1,4 +1,5 @@
-<ion-content [fullscreen]="true">
+<ion-content>
+  
   <div id="logo">
     <img src="assets/img/shared/logo.png" alt="">
   </div>
