creacion de interfaz y servicio para obtener los precios de los tipos de soliciudes y creacion de html para mostrar el historial de las solicitudes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       <ion-tab-button tab="principal">
         <ion-img src="assets/img/shared/homesolo-01.png"></ion-img>
       </ion-tab-button>
-      <ion-tab-button tab="request-history">
+      <ion-tab-button tab="history">
         <ion-img src="assets/img/shared/pedidossolo-01.png"></ion-img>
       </ion-tab-button>
     </ion-tab-bar>
