creacion de boton y metodo para mostrar pedido en curso

--- a/src/app/history/history.page.html
+++ b/src/app/history/history.page.html
@@ -13,7 +13,7 @@
           <p *ngIf="request.type_request==2">Favores</p>
           <p *ngIf="request.type_request==3">Compras</p>
           <p *ngIf="request.type_request==4">Rinoceronte</p>
-          <ion-button shape="round">Detalles</ion-button>
+          <!-- <ion-button shape="round">Detalles</ion-button> -->
         </ion-label>
       </ion-item>
     </div>
