modificacion estilos en historial

--- a/src/app/history/history.page.html
+++ b/src/app/history/history.page.html
@@ -5,7 +5,7 @@
     <p>Historial</p>
   </div>
   <ion-list>
-    <div *ngFor="let request of requests; let i = index">
+    <div *ngFor="let request of requests">
       <ion-item>
         <ion-label>
           <h1>{{request.id}}</h1>
