--- a/src/app/history/history.page.html
+++ b/src/app/history/history.page.html
@@ -1,4 +1,4 @@
-<app-header [showBack]="false" [showConfig]="true" [urlBack]="null" [showLogo]="true"></app-header>
+<app-header [showBack]="true" [showConfig]="true" [urlBack]="principal" [showLogo]="true"></app-header>
 
 <ion-content>
   <div class="title-tertiary">
