--- a/src/app/notifications/notifications.page.html
+++ b/src/app/notifications/notifications.page.html
@@ -1,9 +1,10 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>notifications</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [showBack]="true" [showConfig]="true" [urlBack]="principal" [showLogo]="true"></app-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item>
+      <ion-label>Pedidos</ion-label>
+      <ion-toggle slot="end"></ion-toggle>
+    </ion-item>
+  </ion-list>
 </ion-content>
