adicion imagen de fondo en prinicipal

--- a/src/app/principal/principal.page.scss
+++ b/src/app/principal/principal.page.scss
@@ -1,3 +1,7 @@
+ion-content{
+  --background: url("../../assets/img/principal/fondo.png") no-repeat center/cover fixed;
+}
+
 #options{
   text-align: center;
 }
