adicion de navegador de app para store

--- a/src/app/principal/principal.page.html
+++ b/src/app/principal/principal.page.html
@@ -8,10 +8,13 @@
   </div>
   <br>
   <div id="options">
-    <img src="assets/img/principal/deunastorepequeño-01.png" >
+    <img src="assets/img/principal/deunastorepequeño-01.png" (click)="openStore()">
     <img src="assets/img/principal/deuanfavorespequeño-01.png" (click)="openTypeService()">
     <img src="assets/img/principal/rinocerontepequeño-01.png" (click)="openRhinoceros()">
     <br>
-    <img src="assets/img/principal/soportepequeño-01.png" (click)="openConfigSupport()">
+    <a href="https://wa.me/3217581089">
+      <img src="assets/img/principal/soportepequeño-01.png" >
+    </a>
+
   </div>
 </ion-content>
